css/styles.css
#top-image {
    background-image: url("../img/pizza-bg-color.png");
    height: 1080px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    max-width: 100%;
}

#cover1,
#cover2,
#cover3,
#cover4 {
    background-image: url("../img/pizza-bg-black.png");
    height: 1080px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    overflow: hidden;
    max-width: 100%;
}

#cover1 {
    height: 50px;
}

#cover2 {
    height: 100px;
}

#cover3 {
    height: 150px;
}

#cover4 {
    height: 720px;
    background-attachment: fixed;
}

#space1,
#space2,
#space3,
#space4 {
    background-image: url("../img/pizza-bg-color.png");
    height: 20px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#space1 {
    height: 50px;
}

#space2 {
    height: 40px;
}

#space3 {
    height: 30px;
}

#space4 {
    height: 20px;
}

#menu {
    border-top: 5px solid #fdb913;
    background-image: url("../img/grey-background.png");
    height: max-content;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    padding: 0px;
}

.sidenav {
    height: 100%;
    width: 160px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #000;
    border-right: 5px solid #fdb913;
    overflow-x: hidden;
    padding-top: 20px;
    z-index: 2;
}

.sidenav a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
}

.sidenav a:hover {
    color: #f2f2f2;
}

@media screen and (max-height: 450px) {
    .sidenav {
        padding-top: 15px;
    }
    .sidenav a {
        font-size: 18px;
    }
}

#navbar {
    overflow: hidden;
    background-color: #f2f2f2;
    width: 100%;
    padding: 10px 10px 10px 170px;
    height: max-content;
    z-index: 1;
    border-bottom: 5px solid #000;
}


/* Navbar links */

#navbar a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px;
    text-decoration: none;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    padding-top: 60px;
    transition: 0.2ms;
}

#bottom {
    background-image: url("../img/bottom-page-div.png");
    height: 1080px;
    background-attachment: scroll;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    max-width: 100%;
}

.container {
    overflow: hidden;
}


/* Add a dark background to the active button */

.btn.active {
    background-color: #fdb913;
    border-color: #fdb913;
}

.flex-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.flex-container img {
    height: 60px;
    padding-bottom: 10px;
    padding-top: 10px;
}

#icon {
    vertical-align: top;
    display: inline-block;
    text-align: center;
    width: 120px;
}

.caption {
    display: block;
}

#pizza {
    margin: 20px;
    padding: 5px;
    flex-direction: column;
    align-items: center;
}

.circle {
    margin: 20px 0 0 20px;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    width: 300px;
    height: 300px;
    overflow: hidden;
    -webkit-transition: all 0.7s ease-out;
    -moz-transition: all 0.7s ease-out;
    -o-transition: all 0.7s ease-out;
    transition: all 0.7s ease-out;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 20px 20px 20px 20px;
}

.circle>img {
    width: 100%;
    height: 100%;
    max-height: 100%;
    padding: 0px;
}

.circle:hover {
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    -ms-transform: scale(1.1);
    -o-transform: scale(1.1);
    transform: scale(1.1);
}

.pizza-des {
    width: 300px;
}

#menu-items {
    display: flex;
    flex-wrap: wrap;
    margin-left: 160px;
    margin-top: 100px;
}

.filterDiv {
    display: none;
    /* Hidden by default */
}


/* The "show" class is added to the filtered elements */

.show {
    background-color: #f2f2f2;
    display: flex;
}

